--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-community/masked-view": "^0.1.10",
     "@react-native-firebase/app": "^7.2.1",
     "@react-native-firebase/auth": "^8.0.5",
+    "@react-native-firebase/database": "^7.2.2",
     "@react-native-firebase/firestore": "^7.1.7",
     "@react-navigation/native": "^5.5.0",
     "@react-navigation/stack": "^5.4.1",
