--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-safe-area-context": "^3.0.2",
     "react-native-screens": "^2.8.0",
     "react-native-svg": "^12.1.0",
-    "react-native-vector-icons": "^6.6.0"
+    "react-native-vector-icons": "^6.6.0",
+    "sp-react-native-mqtt": "^0.4.25"
   },
   "devDependencies": {
     "@babel/core": "^7.10.2",
